# otoroshictl

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  NOTICE  README.md  SECURITY.md  doc.sh
.github/: CONTRIBUTING.md
.github/workflows/: release.yaml  test.yaml
docker/: docker-compose.test.yaml
docs/: 404.html  index.html  search-index.json  sitemap.xml
docs/assets/css/: styles.24739b37.css  styles.6ffe248f.css  styles.d6c90b81.css
docs/assets/js/: 0429abf9.f68c101f.js  046e2194.6feb3e70.js  046e2194.b8521177.js  07f8cc34.93bd984a.js  0c7c6c06.cf875106.js  0c7c6c06.f7bdd0bf.js  0d398051.589d6793.js  0e384e19.ab7ff39f.js  0e736cf5.2122eeca.js  0e736cf5.79c254a6.js  0eeca220.75e9cb5b.js  138e0e15.dec00d74.js  14eb3368.8284a5cc.js  14eb3368.9f5cecaa.js  14eb3368.a29bfe9c.js  17896441.090ddddb.js  17896441.d0f6fa34.js  17896441.d425522f.js  1852508c.fa02f161.js  18891827.90bc7e9c.js  18891827.e209932d.js  189.72caeb06.js  18c41134.19786582.js  1a4e3797.ac726f9b.js  1a7cfb52.98aadf00.js  1a7cfb52.ae18c310.js  1a7cfb52.d8bd0052.js  1db64337.014a7b0b.js  1db64337.491d2bd2.js  1e4232ab.071d3775.js  1f391b9e.556204e3.js  1f391b9e.73686c0e.js  22f116a9.8129f6e7.js  237.68611c34.js  237.776b7d17.js  285.0295ed16.js  3847b3ea.d38c4278.js  393be207.59178887.js  393be207.c935dc24.js  3c5ef32a.43ef3074.js  (+126 more)
docs/docs/category/cloud-apim-integration/: index.html
docs/docs/category/installation/: index.html
docs/docs/category/mesh-sidecar/: index.html
docs/docs/category/remote-tunnels/: index.html
docs/docs/category/setup/: index.html
docs/docs/cloudapim/: index.html
docs/docs/install/: index.html
docs/docs/intro/: index.html
docs/docs/overview/: index.html
docs/docs/remotetunnels/: index.html
docs/docs/setup/: index.html
docs/docs/sidecar/: index.html
docs/markdown-page/: index.html
docs/search/: index.html
documentation/: docusaurus.config.js  package-lock.json  package.json
documentation/docs/: install.md  install.mdx  overview.md  overview.mdx  remotetunnels.md  remotetunnels.mdx  setup.md  setup.mdx
documentation/docs/cloudapim/: _category_.json  deployments.md  deployments.mdx  index.md  serverless.md  serverless.mdx
documentation/docs/install/: _category_.json  download.md
documentation/docs/remotetunnels/: _category_.json  index.md
documentation/docs/setup/: _category_.json  index.md
documentation/docs/sidecar/: _category_.json  index.md  index.mdx  kubernetes.md  kubernetes.mdx  outside.md  outside.mdx
documentation/docs/tutorial-basics/: markdown-features.mdx
documentation/docs/usage/: health.md  health.mdx  infos.md  infos.mdx  metrics.md  metrics.mdx  resources.md  resources.mdx  version.md  version.mdx
documentation/src/css/: custom.css
documentation/src/pages/: index.js  index.module.css
src/: main.rs
src/challenge/: config.rs  error.rs  server.rs
src/cli/: cliopts.rs  config.rs  mod.rs
src/cli/commands/: cloud_apim.rs  config.rs  entities.rs  health.rs  infos.rs  metrics.rs  mod.rs  resources.rs  toolbox.rs  version.rs
src/http_utils/: mod.rs
src/otoroshi/: mod.rs  protocol.rs
src/sidecar/: cache.rs  config-out.yaml  config.rs  config.yaml  dns.rs  inboundproxy.rs  iptables.sh  mod.rs  outboundproxy.rs  reference.yaml  sidecar.rs
src/tunnels/: mod.rs  remote.rs  tcp.rs
src/utils/: browser.rs  entity.rs  file.rs  http.rs  interactive.rs  mod.rs  otoroshi.rs  out.rs  table.rs
test_files/: route1.yaml  route3.json
tests/: challenge_tests.rs  config_tests.rs  e2e_tests.rs  resources_tests.rs  smoke_tests.rs  toolbox_tests.rs
tests/common/: cli.rs  mod.rs  test_data.rs
(+33 files in other folders)
