[package]
name = "otoroshictl"
version = "0.0.10"
edition = "2024"
authors = ["mathieu.ancelin@cloud-apim.com"]
license = "Apache-2.0"
description = "a CLI to manage your otoroshi clusters with style ;)"
readme = "README.md"
repository = "https://github.com/cloud-apim/otoroshictl"
keywords = ["cli", "otoroshi", "apim", "otoroshi-as-code", "gitops"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/otoroshictl"

exclude = [
  "docs",
  "documentation",
]

[dependencies]
async-recursion = "1.0.5"
base64 = "0.21.4"
chrono = "0.4.31"
clap = { version = "4.4.5", features = ["derive"] }
cli-table = "0.4.7"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
edit = "0.1.4"
env_logger = "0.10.0"
futures = { version = "0.3.28", features = ["thread-pool"] }
futures-channel = "0.3.29"
futures-util = "0.3.28"
hmac = "0.12.1"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.2"
json_value_merge = "2.0.0"
jwt = "0.16.0"
log = "0.4.20"
moka = { version = "0.12.1", features = ["sync", "future"] }
notify = "6.1.1"
paris = "1.5.15"
rand = "0.8.5"
run_script = "0.10.1"
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
sha2 = "0.10.8"
stringreader = "0.1.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }
trust-dns-resolver = "0.23.1"
url = "2.4.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
walkdir = "2.4.0"
webbrowser = "0.8.12"
webpki-roots = "0.25.2"
