[package]
name = "otoroshictl"
version = "0.0.11"
edition = "2024"
authors = ["mathieu.ancelin@cloud-apim.com"]
license = "Apache-2.0"
description = "a CLI to manage your otoroshi clusters with style ;)"
readme = "README.md"
repository = "https://github.com/cloud-apim/otoroshictl"
keywords = ["cli", "otoroshi", "apim", "otoroshi-as-code", "gitops"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/otoroshictl"

exclude = [
  "docs",
  "documentation",
]

[dependencies]
async-recursion = "1.1.1"
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
cli-table = "0.5.0"
confy = { version = "2.0.0", features = ["yaml_conf"], default-features = false }
edit = "0.1.5"
env_logger = "0.11.8"
futures = { version = "0.3.31", features = ["thread-pool"] }
futures-channel = "0.3.31"
futures-util = "0.3.31"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.2"
json_value_merge = "2.0.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = "0.4.28"
moka = { version = "0.12.11", features = ["sync", "future"] }
notify = "8.2.0"
paris = "1.5.15"
rand = "0.9.2"
run_script = "0.11.2"
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
stringreader = "0.1.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }
trust-dns-resolver = "0.23.2"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
walkdir = "2.5.0"
webbrowser = "1.0.6"
webpki-roots = "0.25.2"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
serial_test = "3.2.0"
